增加错误提示自定义

--- a/login/index.html
+++ b/login/index.html
@@ -28,7 +28,12 @@
 
 	
 </div>
+__SCRIPTJS__
+<script src="__PATH__/layer/layer.js"></script>
+__SCRIPT__
 
-
+<ts>
+layer.msg(__TS__,{icon:5});	
+</ts>
 </body>
 </html>
